--- a/MES.UI/wwwroot/index.html
+++ b/MES.UI/wwwroot/index.html
@@ -8,7 +8,8 @@
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/chartInterop.js"></script>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="MES.UI.styles.css" rel="stylesheet" />
 </head>
